<resources>
    <string name="app_name">Output Test Task</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="list">List</string>
    <string name="scaling">Scaling</string>
    <string name="service">Service</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="pref_summary">Sets the language of the application</string>
    <string name="pref_title">Language</string>
    <string name="pref_dialog_title">Choose language</string>
    <string name="common">Common</string>
    <string name="action_add">Add</string>
    <string name="add_new_item">Add new item</string>
    <string name="edit_item">Edit item</string>
    <string name="done">Done</string>
    <string name="revert">Revert</string>
    <string name="input_items_title">Input items title</string>
    <string name="new_title_was_not_saved">New title was not saved</string>
    <string name="save_title">Save title?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="camera">Camera</string>
    <string name="empty" />
    <string name="please_connect_to_internet">Please connect to internet</string>

    <string-array name="languages">
        <item>English</item>
        <item>Russian</item>
    </string-array>

    <string-array name="languages_entry_values">
        <item>en</item>
        <item>ru</item>
    </string-array>
</resources>
